# cuParticle

./: .gitlab-ci.yml  CMakeLists.txt  package.xml
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: cuPF_ros.1524636336374.pdom
.metadata/.plugins/org.eclipse.cdt.make.core/: cuPF_ros.sc
.metadata/.plugins/org.eclipse.core.resources/: 0.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/cuPF_ros/: .markers.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/cuPF_ros/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.zohar-inspiron-5523_4096/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.zohar-inspiron-5523_4096/FP.local.files_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.zohar-inspiron-5523_4096/FP.org.eclipse.ptp.remote.rse.core._0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.zohar-inspiron-5523_4096/H.local_16/: node.properties
cuPF_2/: .cproject  .project  ICP_Process.cpp  main.cpp  main.cu  particle_filter.cu  particle_filter.h
cuPF_2/devices/: devices.cuh  devices.h  lidar.cu  map.cu  odometry.cu
cuPF_2/modules/: cloud2data.cpp  cub_wrapper.cuh  emicp.cu  emicp.cuh  emicp.h  findRTfromS.cpp  lidar.cu  nd_noise.hcu  odometry.cu
cuPF_2/user/: behavior.h  config.h  likelihood.cuh  likelihood.h
cuPF_ros/: .cproject  .project  binary_search.cpp  bridge_header.h  handler.cu  kernel.cu  kernel.hcu  likelihood.cu  likelihood.hcu  main.cu  nd_noise.cu  nd_noise.hcu  scan_largearray_kernel.cu
launch/: simulation.launch
models/robot/: mecanum_adaptive_trajectory.iam  myrobot.urdf
models/world/: simulation.world
